@@ -1,3 +1,8 @@
+2007-06-15  Martin Leidig  <mleidig@schlund.de>
+
+	* src/de/schlund/pfixcore/workflow/Context.java: include __frame parameter to
+	reuse redirect URL (if existing)
+
 2007-06-15  Sebastian Marsching  <sebastian.marsching@1und1.de>
 
 	* projects/core/editor2/txt/pages/main_home.xml: 
